# SF10X

./: .env  .gitignore  CLAUDE.md  README-database.md  README.md  alembic.ini  docker-compose.yml  justfile  package-lock.json  pyproject.toml  requirements.txt  test_db_connection.py
app/: constants.py  db_service.py  file_utils.py  llm_generator.py  llm_response_formatter.py  main.py  select_model.py  summarizer.py  summary_service.py  test_transcript_processor.py  transcript_summaries.json  transcript_summaries2.json  transcript_summaries_2.json  upload_summary.py
app/prompts/: rag_chatbot_system_prompt.txt  summarization_system_prompt.txt  summarization_user_prompt.txt
app/schemas/: schema.py
database/: connection.py  models.py
database/init/: 01-init.sql
database/migrations/: env.py
docs/: data-schemas.md  hybrid-search-evaluation.md  pgvector-vs-chromadb-comparison.md  prd.md
frontend/: .gitignore  index.html
frontend/public/: videos
scripts/: chunk_and_embed_sync.py  get_timestamps.py  parsed_meetings.json  scrape_sfgovtv.py  scrape_transcripts.py  semantic_search.py  test_chunking.py  test_chunking_single.py  test_single_transcript.py  upload_metadata.py  upload_transcripts.py
transcripts/: 10_50121.txt  10_50188.txt  10_50251.txt  10_50291.txt  10_50330.txt  10_50352.txt  10_50412.txt  10_50483.txt  10_50523.txt  transcript_158261760002_25_20_id35273.txt  transcript_158322240003_03_20_id35351.txt  transcript_175195800007_08_25_id50352.txt  transcript_175316760007_22_25_id50483.txt  transcript_175377240007_29_25_id50523.txt
(+29 files in other folders)
